--- a/08-缓存.html
+++ b/08-缓存.html
@@ -20,7 +20,11 @@
 
 
             var moon = {};
-
+            // console.log(moon[10]);
+            //     if(!undefined){
+            //         console.log(123);
+                    
+            //     }
             function fn(n){
 
                if(n===1 || n ===2){
